# theball

./: .gitignore  CMakeLists.txt  README.md
include/: AssetManager.hpp  GameInstance.hpp
include/animation/: Animation.hpp  Frame.hpp  SpriteFrame.hpp  UIFrame.hpp
include/entity/: Entity.hpp  RectEntity.hpp
include/ui/: Button.hpp  SizeBox.hpp  TextBox.hpp  UIElement.hpp
include/world/: Vec2.hpp  World.hpp
src/: AssetManager.cpp  GameInstance.cpp  main.cpp
src/animation/: SpriteFrame.cpp  UIFrame.cpp
src/entity/: Entity.cpp  RectEntity.cpp
src/ui/: Button.cpp  SizeBox.cpp  TextBox.cpp  UIElement.cpp
src/world/: World.cpp
